--- a/public/css/shop-product-edit.css
+++ b/public/css/shop-product-edit.css
@@ -21,3 +21,7 @@ body {
 input {
     all: inherit !important;
 }
+
+input:hover {
+    cursor: url("https://img.icons8.com/android/24/000000/pencil.png"), auto;
+}
