--- a/public/css/shop-product-edit.css
+++ b/public/css/shop-product-edit.css
@@ -13,7 +13,8 @@ body {
 }
 
 .product-image {
-    height: 20vh !important;
+    width: 200em !important;
+    height: 200em !important;
     object-fit: cover;
 }
 
