--- a/public/css/base.css
+++ b/public/css/base.css
@@ -56,6 +56,6 @@ a, a:hover, a:focus {
     display: block;
 }
 #sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
+    color: white;
+    background: var(--dark);
 }
