--- a/public/css/base.css
+++ b/public/css/base.css
@@ -11,7 +11,6 @@ body {
 }
 
 #sidebar {
-    
     min-width: 250px;
     max-width: 250px;
     min-height: 100% !important;
@@ -50,7 +49,7 @@ a, a:hover, a:focus {
 
 #sidebar {
     /* don't forget to add all the previously mentioned styles here too */
-    background: var(--gray-dark);
+    background: #7386D5;
     color: #fff;
     transition: all 0.3s;
 }
@@ -61,6 +60,6 @@ a, a:hover, a:focus {
     display: block;
 }
 #sidebar ul li a:hover {
-    color: white;
-    background: var(--dark);
+    color: #7386D5;
+    background: #fff;
 }
