--- a/public/css/base.css
+++ b/public/css/base.css
@@ -19,12 +19,7 @@ body {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    /* top layer */
-    z-index: 9999;
+    min-height: 100% !important;
 }
 
 #sidebar.active {
