--- a/public/css/base.css
+++ b/public/css/base.css
@@ -61,8 +61,8 @@ a, a:hover, a:focus {
 
 #sidebar {
     /* don't forget to add all the previously mentioned styles here too */
-    background: #7386D5;
-    color: #fff;
+    background: var(--gray);
+    color: #ffffff;
     transition: all 0.3s;
 }
 
@@ -72,6 +72,6 @@ a, a:hover, a:focus {
     display: block;
 }
 #sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
+    color: #ffffff;
+    background: var(--gray-dark);
 }
