--- a/public/css/shop-product-edit.css
+++ b/public/css/shop-product-edit.css
@@ -41,7 +41,6 @@ input:not(#search) {
 	height:60px;
 	bottom:40px;
 	right:40px;
-	background-color:#0C9;
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
@@ -50,4 +49,9 @@ input:not(#search) {
 
 .my-float {
 	margin-top:22px;
+}
+
+#save-changes {
+    border: none;
+    outline:none;
 }
