--- a/public/css/shop-product-edit.css
+++ b/public/css/shop-product-edit.css
@@ -36,19 +36,15 @@ input:not(#search) {
 }
 
 .float {
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
+	position: fixed;
+	width: 60px;
+	height: 60px;
+	bottom: 40px;
+	right: 40px;
 	color:#FFF;
-	border-radius:50px;
-	text-align:center;
+	border-radius: 50px !important;
+	text-align: center;
 	box-shadow: 2px 2px 3px #999;
-}
-
-.my-float {
-	margin-top:22px;
 }
 
 #save-changes {
